# analog-trial

./: .gitignore  CLAUDE.md  README.md  info.yaml  sg13g2_drc_maximal.lyrdb
layout/: assemble_gds.py  assemble_gds.py.bak_pre_restore  compare_netlists.py  debug_highlight_gnd_vdd.py  debug_m3_cluster.py  diagnose_5net_merge.py  diagnose_actual_drain_bus.py  diagnose_all_remaining.py  diagnose_all_shorts.py  diagnose_ap_via2_status.py  diagnose_beol.py  diagnose_bridge_gds.py  diagnose_bridge_point.py  diagnose_buf1_vco_short.py  diagnose_bus_detail.py  diagnose_bus_obstacles.py  diagnose_bus_straps.py  diagnose_c3_breakdown.py  diagnose_category_c.py  diagnose_clip_result.py  diagnose_crosscheck_lvs.py  diagnose_drain_bus_probe.py  diagnose_drain_gap_cause.py  diagnose_drc70.py  diagnose_drc70_analysis.py  diagnose_drc_m3.py  diagnose_drc_shapes.py  diagnose_fixability.py  diagnose_floodfill.py  diagnose_fragmentation.py  diagnose_gap_shapes.py  diagnose_gata1.py  diagnose_gata1_source.py  diagnose_gate_fragmentation.py  diagnose_gate_m1_overlap.py  diagnose_gds_shorts.py  diagnose_gnd_vdd_merge.py  diagnose_lastmile.py  diagnose_lvs_diff.py  diagnose_lvs_shorts.py  (+122 more)
layout/assemble/: __init__.py  access_points.py  bus_straps.py  context.py  drc_check.py  gap_fill.py  gate.py  labels.py  lvs_check.py  lvs_diagnose.py  pcell_place.py  power.py  schema_check.py  signal_routes.py  ties_nwell.py
layout/atk/: CONSTRAINT_SCHEMA.md  README.md  WORKFLOW.md  analyze_drc.py  apply_via2.py  constructive_placer.py  device.py  diagnose_drc.py  diagnose_geometric.py  diagnose_lvs.py  (+21 more)
(+268 files in other folders)
